# todo-cli

./: .gitignore  pyproject.toml
ateeth_todo_cli/: cli.py
ateeth_todo_cli/ateeth_todo_cli/data/: tasks.json
ateeth_todo_cli/model/: Task.py
